@@ -22,7 +22,7 @@ use std::time::Duration;
 
 use clap::{value_t, App, AppSettings, Arg};
 
-use serialport::{ClearBuffer, SerialPortSettings};
+use serialport::ClearBuffer;
 
 const DEFAULT_BLOCK_SIZE: &str = "128";
 
@@ -63,15 +63,13 @@ fn main() {
 }
 
 fn run(port_name: &str, baud_rate: &str, block_size: usize) -> Result<(), Box<dyn Error>> {
-    let mut settings: SerialPortSettings = Default::default();
-    settings.timeout = Duration::from_millis(10);
-
     let rate = baud_rate
         .parse::<u32>()
         .map_err(|_| format!("Invalid baud rate '{}' specified", baud_rate))?;
-    settings.baud_rate = rate.into();
 
-    let mut port = serialport::open_with_settings(&port_name, &settings)
+    let mut port = serialport::new(port_name, rate)
+        .timeout(Duration::from_millis(10))
+        .open()
         .map_err(|ref e| format!("Port '{}' not available: {}", &port_name, e))?;
 
     let chan_clear_buf = input_service();
