@@ -15,15 +15,15 @@ use std::io::Write;
 use std::time::Duration;
 use std::{io, thread};
 
-use serialport::{available_ports, open};
-
 fn main() {
     // Open the first serialport available.
-    let mut serialport = open(&available_ports().expect("No serial port")[0].port_name)
+    let port_name = &serialport::available_ports().expect("No serial port")[0].port_name;
+    let mut port = serialport::new(port_name, 9600)
+        .open()
         .expect("Failed to open serial port");
 
     // Clone the port
-    let mut clone = serialport.try_clone().expect("Failed to clone");
+    let mut clone = port.try_clone().expect("Failed to clone");
 
     // Send out 4 bytes every second
     thread::spawn(move || loop {
@@ -36,7 +36,7 @@ fn main() {
     // Read the four bytes back from the cloned port
     let mut buffer: [u8; 1] = [0; 1];
     loop {
-        match serialport.read(&mut buffer) {
+        match port.read(&mut buffer) {
             Ok(bytes) => {
                 if bytes == 1 {
                     println!("Received: {:?}", buffer);
