@@ -1,4 +1,3 @@
-use std::ffi::OsStr;
 use std::mem::MaybeUninit;
 use std::os::windows::prelude::*;
 use std::time::Duration;
@@ -16,7 +15,7 @@ use winapi::um::winnt::{
 
 use crate::{
     ClearBuffer, DataBits, Error, ErrorKind, FlowControl, Parity, Result, SerialPort,
-    SerialPortSettings, StopBits,
+    SerialPortBuilder, StopBits,
 };
 
 /// A serial port implementation for Windows COM ports
@@ -49,14 +48,11 @@ impl COMPort {
     ///    the device is already in use.
     /// * `InvalidInput` if `port` is not a valid device name.
     /// * `Io` for any other I/O error while opening or initializing the device.
-    pub fn open<T: AsRef<OsStr> + ?Sized>(
-        port: &T,
-        settings: &SerialPortSettings,
-    ) -> Result<COMPort> {
-        let mut name = Vec::<u16>::new();
+    pub fn open(builder: &SerialPortBuilder) -> Result<COMPort> {
+        let mut name = Vec::<u16>::with_capacity(4 + builder.path.len() + 1);
 
-        name.extend(OsStr::new("\\\\.\\").encode_wide());
-        name.extend(port.as_ref().encode_wide());
+        name.extend(r"\\.\".encode_utf16());
+        name.extend(builder.path.encode_utf16());
         name.push(0);
 
         let handle = unsafe {
@@ -73,8 +69,7 @@ impl COMPort {
 
         if handle != INVALID_HANDLE_VALUE {
             let mut com = COMPort::open_from_raw_handle(handle as RawHandle);
-            com.port_name = port.as_ref().to_str().map(|s| s.to_string());
-            com.set_all(settings)?;
+            com.port_name = Some(builder.path.clone());
             Ok(com)
         } else {
             Err(super::error::last_os_error())
@@ -210,19 +205,6 @@ impl SerialPort for COMPort {
         self.timeout
     }
 
-    /// Returns a struct with all port settings
-    // FIXME: Make this return all settings with one DCB read & write
-    fn settings(&self) -> SerialPortSettings {
-        SerialPortSettings {
-            baud_rate: self.baud_rate().expect("Couldn't retrieve baud rate"),
-            data_bits: self.data_bits().expect("Couldn't retrieve data bits"),
-            flow_control: self.flow_control().expect("Couldn't retrieve flow control"),
-            parity: self.parity().expect("Couldn't retrieve parity"),
-            stop_bits: self.stop_bits().expect("Couldn't retrieve stop bits"),
-            timeout: self.timeout,
-        }
-    }
-
     fn set_timeout(&mut self, timeout: Duration) -> Result<()> {
         let milliseconds = timeout.as_secs() * 1000 + timeout.subsec_nanos() as u64 / 1_000_000;
 
@@ -327,17 +309,6 @@ impl SerialPort for COMPort {
         } else {
             Ok(FlowControl::None)
         }
-    }
-
-    // FIXME: Make this set everything with one DCB read & write
-    fn set_all(&mut self, settings: &SerialPortSettings) -> Result<()> {
-        self.set_baud_rate(settings.baud_rate)?;
-        self.set_data_bits(settings.data_bits)?;
-        self.set_flow_control(settings.flow_control)?;
-        self.set_parity(settings.parity)?;
-        self.set_stop_bits(settings.stop_bits)?;
-        self.set_timeout(settings.timeout)?;
-        Ok(())
     }
 
     fn set_baud_rate(&mut self, baud_rate: u32) -> Result<()> {
